fixed image root directory

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
           <div class="project">
             <a href="https://remilekun-hub.github.io/imageFinder/">
-              <img src="/assets/Screenshot (142).png" alt="image finder" />
+              <img src="./assets/Screenshot (142).png" alt="image finder" />
             <p>
              HTML, CSS, JavaScript
             </p>
@@ -93,7 +93,7 @@
 
           <div class="project">
             <a href="https://audiophiile.vercel.app">
-              <img src="/assets/Screenshot (141).png" alt="audiophiile" />
+              <img src="./assets/Screenshot (141).png" alt="audiophiile" />
             <p>
              JavaScript, Next js, React, Tailwind
             </p>
@@ -101,7 +101,7 @@
           </div>
           <div class="project">
             <a href="https://remilekun-hub.github.io/myteam/index.html">
-              <img src="/assets/myteam.png" alt="myteam" />
+              <img src="./assets/myteam.png" alt="myteam" />
             <p>
               HTML, CSS, JavaScript
             </p>
@@ -109,7 +109,7 @@
           </div>
           <div class="project">
             <a href="https://primetime-theta.vercel.app/">
-              <img src="/assets/primetime.png" alt="primetime" />
+              <img src="./assets/primetime.png" alt="primetime" />
               <p>
                 JavaScript, React, Next js, Tailwind, Rest API, Next Auth, Redux
               </p>
@@ -125,25 +125,25 @@
    <section class="imageslider-container">
     <h1>Photos</h1>
     <div class="mySlides fade">
-      <img src="assets/atanda remilekun.jpg" style="width:100%" alt="me">
+      <img src="./assets/atanda remilekun.jpg" style="width:100%" alt="me">
       <div class="text">Me</div>
     </div>
 
     <div class="mySlides fade">
-      <img src="assets/Snapchat-1969171986.jpg" style="width:100%" alt="me and some friends">
+      <img src="./assets/Snapchat-1969171986.jpg" style="width:100%" alt="me and some friends">
       <div class="text">Me and some friends at NYSC passing out parade</div>
     </div>
 
     <div class="mySlides fade">
-      <img src="assets/Snapchat-2139519213.jpg" style="width:100%" alt="me and some friends at the mall">
+      <img src="./assets/Snapchat-2139519213.jpg" style="width:100%" alt="me and some friends at the mall">
       <div class="text">Me and some friends at the mall</div>
     </div>
     <div class="mySlides fade">
-      <img src="assets/IMG_20220224_005123_288.JPG" style="width:100%" alt="me">
+      <img src="./assets/IMG_20220224_005123_288.JPG" style="width:100%" alt="me">
       <div class="text">Me</div>
     </div>
     <div class="mySlides fade">
-      <img src="assets/IMG_20220403_222339_478.JPG" style="width:100%" alt="me">
+      <img src="./assets/IMG_20220403_222339_478.JPG" style="width:100%" alt="me">
       <div class="text">Me</div>
     </div>
 
