--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
    <section class="imageslider-container">
     <h1>Photos</h1>
     <div class="mySlides fade">
-      <img src="./assets/atanda remilekun.jpg" style="width:100%" alt="me">
+      <img src="assets/atanda remilekun.jpg" style="width:100%" alt="me">
       <div class="text">Me</div>
     </div>
 
@@ -172,6 +172,6 @@
       </div>
     </footer> 
 
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
